[package]
name = "c8str"
version = "0.1.3"
edition = "2021"
authors = ["Maia S. R."]
license = "Zlib OR MIT OR Apache-2.0"
description = "String types that are both utf-8 and null terminated"
repository = "https://github.com/maia-s/c8str-rs"
documentation = "https://docs.rs/c8str"
keywords = ["string", "utf-8", "null-terminated", "ffi"]
categories = ["development-tools", "rust-patterns", "no-std", "no-std::no-alloc"]
rust-version = "1.72"

[features]
default = []
alloc = []

# implement std::error::Error for errors
std = ["alloc"]

# for documentation feature labels
nightly = []

[package.metadata.docs.rs]
all-features = true
